# AGRIYA

./: .gitignore  240PuF_modified.txt  AddFiles.cc  CMakeLists.txt  Doxyfile  GetSigma.cc  GlobalAnalyzer.cc  GlobalAnalyzer.hh  Global_Utilities.cc  Global_Utilities.hh  InverseBetaDecay.hh  Makefile  Makefileold  PlotGraphs.cc  PlotHistograms.cc  PlotLinearFits.cc  PlotLinearFits_STEREO.cc  Pu240PuF_modified.txt  Pu240_parser  README.md  StyleFile.cc  StyleFile.hh  analyzeGlobalData.cc  generateTGraphTXTfiles.cc  runScripts.sh  updateDataFiles.cc
Deprecated/: CorrUncer.cpp  InverseBetaDecay.cc  PTS_Utilities.hh  PlotHistograms.cc  PlotLinearFits.cc  cov_syst.txt
PTS_Files/: DayaBayFit.cc  Draw239241Slope.cc  Global_Utilities.cc  MakeSystFile.C  cov_stat.txt  flux_data.txt
Pu240_Nu_data/: TCS_CC_anue_p_VB.txt
Scripts/: PlotGraphs.cc  addP240ToDataFiles.cc  generateFastReactorYields.cc  generateMOXYields.cc  normalizeFFs.cc  plotHypotheticalIBDYields.cc  runDYB_ImprovedDE+RENO+STEREO.sh  runDYB_ImprovedDE+RENO_New.sh  runDYB_New.sh  runGlobal+DYB.sh  runGlobal+DYB_New+RENO+STEREO.sh  runGlobal+DYB_New+RENO+STEREO_Plots.sh  runGlobal+DYB_New+RENO_New.sh  runGlobal+RENO.sh  runRENO.sh  updateDataFiles.cc
cfg/: case_1.cfg  case_2.cfg  case_3.cfg  example.cfg  plotTheoreticalYields.mac
inputs/: DYB+PRHEU.txt  DYB+PRHEU_covstat.txt  DYB.txt  DYB_ImprovedDE+RENO+STEREO.txt  DYB_ImprovedDE+RENO+STEREO_covstat.txt  DYB_ImprovedDE+RENO+STEREO_covsyst.txt  DYB_ImprovedDE+RENO_New.txt  DYB_ImprovedDE+RENO_New_covsyst.txt  DYB_ImprovedDE.txt  DYB_ImprovedDE_covsyst.txt  DYB_covsyst.txt  HEU+LEU.txt  PRHEULEU10.txt  PRHEULEU10_covstatSB10.txt  PRHEULEU10_covsystcorr.txt  PRHEULEU10_covsystcorrDE3.txt  PRHEULEU10_covsystnocorrDE1_5.txt  PRHEULEU10_covsystnocorrDEHP22.txt  PRHEULEU10_covsystnocorrHP1.txt  PRHEULEU8_covsystDE3.txt  PRHEULEUE8.txt  PureDataTest.txt  PureDataTest_covstat.txt  PureDataTest_covsyst.txt  README.md  RENO.txt  RENOFine.txt  RENO_covstat.txt  evol.txt  global+DYB.txt  global+DYB_ImprovedDE+RENO+STEREO.txt  global+DYB_ImprovedDE+RENO+STEREO_covstat.txt  global+DYB_ImprovedDE+RENO+STEREO_covsyst.txt  global+DYB_ImprovedDE+RENO.txt  global+DYB_ImprovedDE+RENO_covstat.txt  global+DYB_ImprovedDE+RENO_covsyst.txt  global+DYB_ImprovedDE.txt  global+DYB_ImprovedDE_covsyst.txt  global+DYB_covsyst.txt  global+RENO.txt  (+6 more)
inputs_updated/: DYB_ImprovedDE+RENO+STEREO.txt  DYB_ImprovedDE+RENO+STEREO_covsyst.txt  DYB_ImprovedDE+RENO_covsyst.txt  RENO_New_covsyst.txt  global+DYB_ImprovedDE+RENO_Ordered.txt  global+DYB_ImprovedDE+RENO_covstat.txt  global+DYB_ImprovedDE_covstat.txt  global.txt
mac/: example.mac
sc/: Pu240_parser.cc  addBaselinetoDataFiles.cc
scripts/: generateDYBUncertainties.cc  generateFakeDYBYields.cc  generateFakeGlobalYields.cc  generateMOXYields.cc  generateRelativeStatCovMatrix.cc  plotGraphs.cc  plotTheoUncertaintiesMatrix.cc  plotUncertaintiesGraphs.cc
src/: GlobalAnalyzer.cc  GlobalAnalyzer.hh  JSONSerializer.cc  StyleFile.cc  StyleFile.hh  TCFGExtractor.cc  TCFGExtractor.hh  Utils.cc  (+7 more)
(+259 files in other folders)
